--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.2.0
 click==8.1.7
 flash==1.0.3
 Flask==2.0.1
+Flask-Cors==4.0.0
 frozenlist==1.4.0
 idna==3.4
 itsdangerous==2.1.2
